--- a/DatePicker/Base.lproj/Main.storyboard
+++ b/DatePicker/Base.lproj/Main.storyboard
@@ -1,9 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
-        <capability name="Constraints with attributes relative to the layout margin" minToolsVersion="6.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,25 +18,34 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wma-2m-sCc">
-                                <rect key="frame" x="16" y="20" width="568" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wma-2m-sCc">
+                                <rect key="frame" x="20" y="44" width="374" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wAz-oA-YmI">
-                                <rect key="frame" x="16" y="556" width="568" height="44"/>
+                                <rect key="frame" x="20" y="803" width="374" height="49"/>
                                 <items/>
                             </toolbar>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="momo" translatesAutoresizingMaskIntoConstraints="NO" id="jae-nZ-N4U">
+                                <rect key="frame" x="87" y="89.5" width="240" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="UIv-TE-xfs"/>
+                                    <constraint firstAttribute="width" constant="240" id="X3e-OT-cKh"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="wma-2m-sCc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="3Li-Rf-c7q"/>
+                            <constraint firstItem="jae-nZ-N4U" firstAttribute="top" secondItem="wma-2m-sCc" secondAttribute="bottom" constant="25" id="9IG-o7-7LY"/>
                             <constraint firstItem="wma-2m-sCc" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="CO6-df-l3n"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wAz-oA-YmI" secondAttribute="bottom" id="DGb-2U-VVl"/>
+                            <constraint firstItem="jae-nZ-N4U" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EAQ-m7-LgJ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wAz-oA-YmI" secondAttribute="bottom" constant="10" id="O5K-h3-wr7"/>
                             <constraint firstItem="wAz-oA-YmI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="QeR-W1-fUA"/>
                             <constraint firstAttribute="trailingMargin" secondItem="wAz-oA-YmI" secondAttribute="trailing" id="XRO-jW-vth"/>
                             <constraint firstAttribute="trailingMargin" secondItem="wma-2m-sCc" secondAttribute="trailing" id="Xj1-OB-Qoj"/>
@@ -48,4 +60,7 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="momo" width="3264" height="2448"/>
+    </resources>
 </document>
